--- a/src/app.postcss
+++ b/src/app.postcss
@@ -66,30 +66,8 @@ p {
     margin-top: 10px;
 }
 
-/* for block of numbers */
-.hljs-ln-numbers {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 
-    text-align: center;
-    color: #ccc;
-    border-right: 1px solid #CCC;
-    vertical-align: top;
-    padding-right: 5px;
 
-    /* your custom style here */
-}
-
-/* for block of code */
-.hljs-ln-code {
-    padding-left: 10px;
-}
-
-.self li::before{
-    content:'-';
-
-}
+  code{
+    white-space: pre-wrap;
+  }
