--- a/src/app.postcss
+++ b/src/app.postcss
@@ -39,11 +39,7 @@ a{
     text-decoration: none !important;
 }
 
-h5{
-    font-weight: 900 !important;
-    font-family: Kalpurush !important;
-    margin-top: 10px
-}
+
 
 .blog-content img{
     display: block;
@@ -65,4 +61,7 @@ blockquote{
 
 p {
     margin-top: 10px;
+}
+h2, h1, h5 {
+    font-family: 'Lato', Kalpurush !important;
 }
