--- a/src/app.postcss
+++ b/src/app.postcss
@@ -50,6 +50,11 @@ a{
 .blog-content h5{
     margin-top: 20px;
 }
+.blog-content i{
+    background: linear-gradient(to right, #22c55e, rgb(51, 139, 147));
+    -webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
 
 blockquote{
     margin:  20px 20px;
@@ -65,3 +70,4 @@ p {
 h2, h1, h5 {
     font-family: 'Lato', Kalpurush !important;
 }
+
