hljs theme change

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -71,3 +71,7 @@ h2, h1, h5 {
     font-family: 'Lato', Kalpurush !important;
 }
 
+pre{
+    background-color: #282c34 !important;
+    border: 1px solid #eee !important;
+}
